Added 3 columns below winter banner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
 
-        <!-- Navigation Menu - Cell 1-->
+        <!-- Navigation Menu - Row 1 -->
         <header class="item1">
             <nav class="nav-menu">
                 <ul>
@@ -24,6 +24,7 @@
         </header>
         <!-- End of Navigation Menu -->
 
+        <!-- Banner Container - Row 2 -->
         <div class="item2" id="banner-container">
             <img src="./images/banner.jpg" alt="">
             <div class="title-container">
@@ -31,22 +32,66 @@
                 <h4>Simple Website Template</h4>
             </div>
         </div> 
+        <!-- End of Banner Container -->
 
+        <!-- Three Column Container - Row 3 -->
         <div class="item3" id="first-container">
-            <div>
-                HTML & CSSS
-            </div>
-            <div>
-                Responsive Design
-            </div>
-            <div>
-                Parallax Layout
+            <div class="first-inner-container">
+                <div class="column-container">
+                    <div class="inner-column">
+                        <img src="./images/wavev2.jpg"/>
+                        <h2>HTML & CSS</h2>
+                        <p>Morbi sagittis justo a velit placerat ullamcorper 
+                            quis quis velit. Sed convallis at risus ullamcorper 
+                            auctor. Praesent quis velit neque. Quisque semper porta 
+                            nisi vitae suscipit. Duis lectus magna, ornare ac 
+                            scelerisque.
+                        </p>
+                        <div class="button-container">
+                            <button>Green Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-container">
+                    <div class="inner-column">
+                        <img src="./images/plants.jpg"/>
+                        <h2>HTML & CSS</h2>
+                        <p>Conquer Template is provided by templatemo for free 
+                            of charge. You can use this template for any kind 
+                            of website. No credit link is required. All images 
+                            by Unsplash. Thank you for visiting our website. 
+                            Please come again!
+                        </p>
+                        <div class="button-container">
+                            <button
+                            style="background-color: rgb(40, 40, 182);">See Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-container">
+                    <div class="inner-column">
+                        <img src="./images/moon.jpg"/>
+                        <h2>HTML & CSS</h2>
+                        <p>Morbi sagittis justo a velit placerat ullamcorper 
+                            quis quis velit. Sed convallis at risus ullamcorper 
+                            auctor. Praesent quis velit neque. Quisque semper porta 
+                            nisi vitae suscipit. Duis lectus magna, ornare ac 
+                            scelerisque.</p>
+                        <div class="button-container">
+                            <button
+                             style="background-color: red;">Red Button</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- End of Three Column Container  -->
 
+        <!-- Two Column Container - Row 4 -->
         <div class="item4">
             second
         </div>
+        <!-- End of Two Column Container -->
 
         <div class="item5">
             services
