added flex layout on items 4 - 6

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="./images/banner.jpg" alt="">
             <div class="title-container">
                 <h3>CONQUER</h3>
-                <h4>Simple Website Template</h4>
+                <h4>Website</h4>
             </div>
         </div> 
         <!-- End of Banner Container -->
@@ -89,16 +89,72 @@
 
         <!-- Two Column Container - Row 4 -->
         <div class="item4">
-            second
+            <div class="item4-flex-container"> 
+                <div class="item4-flex-items item4-item1">
+                    <img src="./images/sunset.png">
+                    <h2>Two Column Left Side</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. Nullam dignissim 
+                        varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. Nullam dignissim 
+                        varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                </div>
+                <div class="item4-flex-items item4-item2">
+                    <img src="./images/sunset.png">
+                    <h2>Two Column Left Side</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. Nullam dignissim 
+                        varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. Nullam dignissim 
+                        varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                </div> 
+            </div>
         </div>
         <!-- End of Two Column Container -->
 
         <div class="item5">
-            services
+            <img src="./images/services.png" alt="">
         </div>
 
         <div class="item6">
-            fourth
+            <div class="item6-container">
+                <div class="item6-items">
+                    <img src="./images/water.png" alt="">
+                    <h2>Column One</h2>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus 
+                        dui libero, in tincidunt purus pretium quis. Fusce posuere 
+                        egestas enim eu viverra.</p>
+                </div>
+                <div class="item6-items">
+                    <img src="./images/water.png" alt="">
+                    <h2>Column Two</h2>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus 
+                        dui libero, in tincidunt purus pretium quis. Fusce posuere 
+                        egestas enim eu viverra.</p>
+                </div>
+                <div class="item6-items">
+                    <img src="./images/water.png" alt="">
+                    <h2>Column Three</h2>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus 
+                        dui libero, in tincidunt purus pretium quis. Fusce posuere 
+                        egestas enim eu viverra.</p>
+                </div>
+                <div class="item6-items">
+                    <img src="./images/water.png" alt="">
+                    <h2>Column Four</h2>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus 
+                        dui libero, in tincidunt purus pretium quis. Fusce posuere 
+                        egestas enim eu viverra.</p>
+                </div>
+            </div>
         </div>
 
         <div class="item7">
