--- a/index.html
+++ b/index.html
@@ -158,11 +158,55 @@
         </div>
 
         <div class="item7">
-            bigColumn
+            <div class="item7-container">
+                <div class="item7-items">
+                    <img src="./images/house-beach.png" alt="">
+                    <h2>Column Four</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. Nullam dignissim 
+                        varius suscipit. Sed in leo sit amet velit finibus pretium. 
+                        Vivamus dictum nisi ac fermentum interdum. Vestibulum vel mauris 
+                        at erat mattis accumsan et ac lorem. Cras non venenatis orci, 
+                        sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, 
+                        dignissim eu orci. Sed vitae venenatis magna, in blandit metus. 
+                        Praesent volutpat cursus rhoncus. Aenean arcu diam, suscipit ac 
+                        neque in, sollicitudin convallis orci.</p>
+                    <br>
+                    <p>Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus 
+                        et magnis dis parturient montes, nascetur ridiculus mus. Vivamus a urna 
+                        tellus. Integer pharetra vitae nisi et lacinia. Morbi sagittis justo a 
+                        velit placerat ullamcorper quis quis velit. Sed convallis at risus 
+                        ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi 
+                        vitae suscipit. Duis lectus magna, ornare ac scelerisque quis, maximus 
+                        eget nisi.</p>
+                    <button type="button">Read More</button>
+                </div>
+            </div>
         </div>
 
         <div class="item8">
-            contact
+            <div class="item8-container">
+                <div class="item8-items">
+                    <h1>Contact Form</h1>
+                    <p>
+                        Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum 
+                        quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum 
+                        velit lacinia. Etiam a mi quis arcu varius condimentum.
+                    </p>
+                    <div class="contact-container">
+                        <div class="input-container">
+                            <input type="text" name="Name" placeholder="Name">
+                            <input type="text" name="Name" placeholder="Email">
+                            <input type="text" name="Name" placeholder="Subject">
+                        </div>
+                        <div class="text-container">
+                            <textarea placeholder="Your message here..."></textarea>
+                        </div>
+                    </div>
+                    <button>Send</button>
+                </div>
+            </div>
         </div>
 
         <div class="item9">
