added footer and finalized contact form template

--- a/index.html
+++ b/index.html
@@ -202,15 +202,17 @@
                         </div>
                         <div class="text-container">
                             <textarea placeholder="Your message here..."></textarea>
+                            <button>Send</button>
                         </div>
                     </div>
-                    <button>Send</button>
                 </div>
             </div>
         </div>
 
         <div class="item9">
-            footer
+            <div class="footer">
+                <span>Recreated By Hugo Ruiz using Flexbox | Design: templatemo</span>
+            </div>
         </div>
     </div>
 
